--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ CMakePresets.json
 /debug
 cubedetect/build/Debug/CubeDetectLib.pdb
 cubedetect/lib/Debug/CubeDetectLib.pdb
+lib/Debug/CubeDetectLib.pdb
